# evidencell

./: .coverage  .gitignore  .mcp.json  CLAUDE.md  CLAUDE_dev.md  CONTRIBUTING.md  README.md  ROADMAP.md  WORKFLOW.md  justfile  pyproject.toml
.claude/: anti-hallucination-hooks.md  settings.json
annotation_transfer/: pyproject.toml
annotation_transfer/annotation_transfer/taxonomies/: CCN20230722.yaml
annotation_transfer/docs/: mapmycells_api_notes.md
annotation_transfer/src/annotation_transfer/: __init__.py  cli.py  convert.py  mapper.py  mapper_local.py  mapper_web.py  preflight.py  score.py  subsample.py  taxonomies.py
annotation_transfer/tests/: conftest.py  test_convert.py  test_format_zoo.py  test_mapper_dispatch.py  test_preflight.py  test_score.py  test_subsample.py  test_taxonomies.py
conf/: gene_mapping_CCN20230722.tsv  oak_config.yaml
docs/: LLM_prompt_guidelines_for_CL_definitions.md  evidencell_presentation.md  relations_guide.md
hooks/: pre-commit
planning/: M4_report_generation.md  ROADMAP_archive_2026-04.md  adaptive_mapping_loop_design.md  asta_deepsearch_integration.md  asta_ingest_lessons_sexually_dimorphic.md  asta_report_ingest_design.md  candelabrum_pilot_lessons.md  citation_traversal_design.md  kb_structure_proposal.md  m5_planning_notes.md  m7_kb_structure_cleanup_plan.md  milestone_label_cleanup.md  minirefs_author_rendering_fix.md  paper_style_reports_review.md  paper_style_reports_review_addendum.md  schema_critique_2026-03-11.md  schema_self_contained_references.md  taxonomy_update_architecture.md  workflow_architecture_design.md
schema/: celltype_mapping.yaml  workflow_schema.yaml
tests/: conftest.py  test_cl_post.py  test_extract_asta_refs.py  test_extract_asta_report.py  test_hook_integration.py  test_kb_examples.py  test_kg_query.py  test_parse_asta_report.py  (+8 more)
(+445 files in other folders)
