[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "annotation-transfer"
version = "0.1.0"
description = "Retrieve single-cell datasets, run MapMyCells, compute F1 matrices."
requires-python = ">=3.12,<3.14"

dependencies = [
  "anndata>=0.10",
  "pandas>=2.0",
  "scipy>=1.11",
  "numpy>=1.24",
  "h5py>=3.9",
  "psutil>=5.9",
  "scanpy>=1.12",
  "httpx>=0.27",
  "pyyaml>=6.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[project.optional-dependencies]
mapper = [
  "cell_type_mapper @ git+https://github.com/AllenInstitute/cell_type_mapper",
]

[project.scripts]
annotation-transfer = "annotation_transfer.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
